possibility to use the legacy impl, settings for ignore query build failure, fix ssl

--- a/contrib/mongo-c-driver-cmake/CMakeLists.txt
+++ b/contrib/mongo-c-driver-cmake/CMakeLists.txt
@@ -84,7 +84,7 @@ set(MONGOC_ENABLE_SSL_SECURE_TRANSPORT 0)
 set(MONGOC_ENABLE_SSL_LIBRESSL 0)
 set(MONGOC_ENABLE_CRYPTO_LIBCRYPTO 0)
 set(MONGOC_HAVE_ASN1_STRING_GET0_DATA 0)
-if (ENABLE_OPENSSL OR ENABLE_OPENSSL_DYNAMIC)
+if (ENABLE_SSL)
     set(MONGOC_ENABLE_SSL 1)
     set(MONGOC_ENABLE_CRYPTO 1)
     set(MONGOC_ENABLE_SSL_OPENSSL 1)
