xray: rename cmake file and build only on amd64 linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,7 @@ add_library(global-libs INTERFACE)
 
 include (cmake/sanitize.cmake)
 
-include (cmake/instrument.cmake)
+include (cmake/xray_instrumentation.cmake)
 
 option(ENABLE_COLORED_BUILD "Enable colors in compiler output" ON)
 
