--- a/.github/ISSUE_TEMPLATE/10_question.yaml
+++ b/.github/ISSUE_TEMPLATE/10_question.yaml
@@ -17,4 +17,4 @@ body:
       label: Question
       description: Please put your question here.
     validations:
-      required: false
+      required: true
