sign release and artifacts for regression

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -162,6 +162,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -206,6 +210,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -252,6 +260,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -301,6 +313,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -346,6 +362,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -386,6 +406,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -431,6 +455,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -481,6 +509,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
@@ -533,6 +565,10 @@ jobs:
         with:
           path: ${{ env.REPORTS_PATH }}
           name: build_report_package_${{ inputs.arch }}
+      - name: Unzip reports
+        run: |
+          unzip ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }} -d ${{ env.REPORTS_PATH }}
+          mv ${{ env.REPORTS_PATH }}/build_report_*.json ${{ env.REPORTS_PATH }}/build_report_package_${{ inputs.arch }}
       - name: Setup
         run: .github/setup.sh
       - name: Get deb url
