--- a/base/base/CMakeLists.txt
+++ b/base/base/CMakeLists.txt
@@ -1,8 +1,10 @@
-add_compile_options($<$<OR:$<COMPILE_LANGUAGE:C>,$<COMPILE_LANGUAGE:CXX>>:${COVERAGE_FLAGS}>)
-
 if (USE_CLANG_TIDY)
     set (CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_PATH}")
 endif ()
+
+if (WITH_COVERAGE)
+    add_compile_options(${COVERAGE_FLAGS})
+endif()
 
 # TODO: Remove this. We like to compile with C++23 (set by top-level CMakeLists) but Clang crashes with our libcxx
 # when instantiated from JSON.cpp. Try again when libcxx(abi) and Clang are upgraded to 16.
