--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -264,7 +264,7 @@ add_custom_target(clickhouse-stripped ALL
     DEPENDS clickhouse
     COMMENT "Stripping clickhouse binary" VERBATIM)
 
-if (ENABLE_TESTS AND NOT_WITH_COVERAGE)
+if (ENABLE_TESTS AND NOT WITH_COVERAGE)
     set (CLICKHOUSE_UNIT_TESTS_TARGETS unit_tests_dbms)
     add_custom_target (clickhouse-tests ALL DEPENDS ${CLICKHOUSE_UNIT_TESTS_TARGETS})
     add_dependencies(clickhouse-bundle clickhouse-tests)
