--- a/.gitmodules
+++ b/.gitmodules
@@ -161,7 +161,7 @@
 [submodule "contrib/xz"]
 	path = contrib/xz
 	url = https://github.com/xz-mirror/xz
-[submodule "contrib/abseil"]
+[submodule "contrib/abseil-cpp"]
 	path = contrib/abseil-cpp
 	url = https://github.com/ClickHouse/abseil-cpp.git
 [submodule "contrib/dragonbox"]
