--- a/docker/test/style/Dockerfile
+++ b/docker/test/style/Dockerfile
@@ -10,14 +10,15 @@ RUN sed -i "s|http://archive.ubuntu.com|$apt_archive|g" /etc/apt/sources.list
 RUN apt-get update && env DEBIAN_FRONTEND=noninteractive apt-get install --yes \
         aspell \
         curl \
-        git \
-        gh \
         file \
+        gh \
+        git \
         libxml2-utils \
+        locales \
         moreutils \
         python3-pip \
         yamllint \
-        locales \
+        zstd \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /var/cache/debconf /tmp/*
 
